[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/sprites/clouder.png" type="Texture" id=1]
[ext_resource path="res://entities/Clouder.gd" type="Script" id=2]
[ext_resource path="res://components/AI.tscn" type="PackedScene" id=3]
[ext_resource path="res://components/Health.tscn" type="PackedScene" id=4]
[ext_resource path="res://components/Movement.tscn" type="PackedScene" id=5]
[ext_resource path="res://components/Loot.tscn" type="PackedScene" id=6]
[ext_resource path="res://components/RoomVisibility.tscn" type="PackedScene" id=7]
[ext_resource path="res://components/RobotLegs.tscn" type="PackedScene" id=8]
[ext_resource path="res://components/Damage.tscn" type="PackedScene" id=9]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.0
height = 4.0

[node name="Clouder" type="KinematicBody2D"]
position = Vector2( 29, 43 )
collision_layer = 64
collision_mask = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -10 )
texture = ExtResource( 1 )

[node name="Health" parent="." instance=ExtResource( 4 )]
max_health = 10.0

[node name="CollisionShape2D" parent="Health/DamageArea" index="0"]
position = Vector2( 0, -4 )

[node name="Bar" parent="Health" index="1"]
margin_top = -21.0
margin_bottom = -17.0

[node name="Movement" parent="." instance=ExtResource( 5 )]

[node name="AI" parent="." instance=ExtResource( 3 )]
cowardly = true

[node name="Loot" parent="." instance=ExtResource( 6 )]

[node name="RoomVisibility" parent="." instance=ExtResource( 7 )]

[node name="RobotLegs" parent="." instance=ExtResource( 8 )]
walk_speed = 60.0

[node name="TargetEnemyTimer" type="Timer" parent="."]
wait_time = 0.051
autostart = true

[node name="Damage" parent="." instance=ExtResource( 9 )]

[node name="CollisionShape2D" parent="Damage" index="0"]
position = Vector2( 0, -1.5 )

[node name="DashTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true
autostart = true

[node name="StopDashingTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[connection signal="timeout" from="TargetEnemyTimer" to="." method="_on_TargetEnemyTimer_timeout"]
[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
[connection signal="timeout" from="StopDashingTimer" to="." method="_on_StopDashingTimer_timeout"]

[editable path="Health"]
[editable path="AI"]
[editable path="Damage"]
